tests/specs/node/dynamic_import_and_require_dual/resolution_mode_import.out
Check file:///[WILDLINE]/resolution_mode_import.mts
TS2322 [ERROR]: Type '"other"' is not assignable to type '"mjs"'.
const test: typeof kind = "other";
      ~~~~
    at file:///[WILDLINE]/resolution_mode_import.mts:5:7

error: Type checking failed.
